# JenkinsTest

./: .gitignore  CMakeLists.txt  Example.hpp  Jenkinsfile  Jenkinsfile-bkp  test-bkp.sh  test.sh
cmake-test/: Example.cpp  Jenkinsfile
gcc-test/: Jenkinsfile
test/: CMakeLists.txt  ExampleTests.cpp  ExampleTests2.cpp
